# legacy-QMTK

./: .gitattributes  .gitignore  README.md  TOOD.md  data.yml  setup.py
docs/source/: configs.rst  ham.rst  index.rst  sampler.rst
examples/: 24-09-2017-1791.yml  24-09-2017-1878.yml  exact_gd.py  fixed_basis.py  load_yaml.py  measure_state.py  mlp.py  test_syngrad.py
examples/data/: makedata.py
examples/gan/: config.yml  gan.py
notes/: local.md  state.md  test_basis.py
notes/local/: bloch.tex  local.tex
qmtk/: basis.py  space.py  test.py
qmtk/csrc/: general.hpp  ham.cpp  ham.hpp  lattice.cpp  lattice.hpp  shape.hpp  site.hpp  space.cpp  space.hpp  utils.cpp  utils.hpp
qmtk/ham/: __init__.py  core.py  heisenberg.py  tfi.py
qmtk/ham/experimental/: core.py  demo.py  expr.py  local.py
qmtk/lattice/: __init__.py  core.py
qmtk/lattice/csrc/: lattice.cpp
qmtk/legacy/: space.py  utils.py
qmtk/lib/bs/: CMakeLists.txt  README.md
qmtk/lib/bs/include/biscuit/: bs.h  complex.hpp  container.hpp  container_impl.hpp  expression.hpp  general.hpp  math.hpp  operators.hpp  shape.hpp  shape_impl.hpp  shape_iter.hpp  shape_iter_impl.hpp  storage.hpp  storage_impl.hpp  tensor.hpp  tensor_impl.hpp  type_trait.hpp
qmtk/lib/bs/test/: CMakeLists.txt  container.hpp  general.hpp  index.hpp  shape.hpp  storage.hpp  tensor.hpp  test.cpp
qmtk/lib/bs/test/main/: test.cpp
qmtk/lib/qmtk/: CMakeLists.txt  general.h  ham.h  lattice.cpp  lattice.h  operators.h  qmtk.h  shape.cpp  shape.h  site.cpp  site.h  tensor.h  tensor_impl.h
qmtk/lib/qmtk/test/: general.hpp  lattice.hpp  site.hpp  test.cpp
qmtk/sampler/: __init__.py  core.py  multi.py  space.py
qmtk/utils/: __init__.py  kron.py
qmtk/utils/abstracts/: __init__.py
qmtk/utils/preprocess/: __init__.py  base.py  benchmark.py  docs_processors.py  qmtk_loggers.py  qmtk_type_decorators.py
test/: test_lattice.py
tests/: ani_lattice.py  run_test.sh  test.py  test_basis.py  test_collector.py  test_configs.py  test_data.py  test_ham.py  test_lattice.py  test_sampler.py  test_state.py  test_utils.py  testutils.py
vmc/: __init__.py  basis.py  state.py
vmc/collector/: __init__.py  base.py  stcollector.py
vmc/configs/: __init__.py  base.py  iterall.py  randselect.py  spinconserve.py
vmc/data/: __init__.py  datasets.py  generator.py
vmc/dynamics/: aqc.py
vmc/ham/: __init__.py  base.py  consts.py  ham.py  hamiltonian.py  heisenberg.py  tfi.py
vmc/ham/local/: __init__.py  one.py  two.py
vmc/lattice/: __init__.py  base.py  chain.py  square.py
vmc/legacy/: data.py  dataset.py  serialization.py  syn.py
vmc/lib/: THGeneral.h.in
vmc/lib/AQC/: General.h  aqc.c  expmv.c  expmv.h  float  float.c
vmc/lib/AQC/generic/: expmv.c
vmc/lib/qbase/: qstate.c  qstate.h
vmc/models/: __init__.py  config.py  gan.py
vmc/sampler/: __init__.py  base.py  prn.py  st.py
vmc/utils/: __init__.py  consts.py  core.py  decorators.py  grads.py
